[gd_scene load_steps=4 format=3 uid="uid://c0jdqg1xenskv"]

[ext_resource type="Script" path="res://util_scenes/areaswitch.gd" id="1_voemo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ycyu"]
size = Vector2(39, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_n7van"]
radius = 1000.0

[node name="areaswitch" type="ColorRect"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_voemo")
next_area_load_radius = 10

[node name="areaswitch" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaswitch"]
visible = false
position = Vector2(20.5, 21)
shape = SubResource("RectangleShape2D_6ycyu")

[node name="next_area_load" type="Area2D" parent="."]
visible = false
position = Vector2(20, 20)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_area_load"]
shape = SubResource("CircleShape2D_n7van")

[connection signal="body_entered" from="areaswitch" to="." method="_on_body_entered"]
[connection signal="body_entered" from="next_area_load" to="." method="_on_next_area_load_body_entered"]
